syntax = "proto3";

package users;

service UsersService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateBalance(UpdateBalanceRequest) returns (GetUserResponse) {}
}

message UpdateBalanceRequest {
    string email = 1;
    float balance = 2;
}

message GetUserRequest {
    string email = 1;
}

message GetUserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    float balance = 4;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {
    string name = 1;
    string email = 2;
    float balance = 3;
}